vistas registro e inicio sesion listo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 				<ul class="right hide-on-med-and-down">
 				  	<li id="search-icon"><a href="#"><i class="material-icons">search</i></a></li>
-					<li><a href="#">Registrarse</a></li>
+					<li><a href="registrarse.html">Registrarse</a></li>
 		        	<li><a href="#">Iniciar Sesión</a></li>
 				</ul>
 			</div>
