--- a/vistas/verProductos.html
+++ b/vistas/verProductos.html
@@ -81,8 +81,6 @@
                 <a class="carousel-item" href="#three!"><img src="http://lorempixel.com/800/400/food/3"></a>
                 <a class="carousel-item" href="#four!"><img src="http://lorempixel.com/800/400/food/4"></a>
               </div>
-              <!--Mapa del servicio-->
-              <div id="map"></div>
 
             </div>
           </div>
@@ -92,39 +90,19 @@
     
     <!--Pop up-->
               <div class="cd-popup" role="alert">
-                <div class="cd-popup-container">
+                <div class="cd-popup-container productos-container">
                   <div class="banda">
                     <div class="pop-contenedor">
                       <img class="imagen-servicio imagen-servicio-popup z-depth-3 responsive-img" src="../img/audifonos.jpg">
-                    <div class="row grid-elementos grid-elementos-pop">
-                      <!--Titulo del producto o servicio-->
-                      <h3>Audifonos</h3>
-                    </div>
+                      <div class="row grid-elementos grid-elementos-pop">
+                        <!--Titulo del producto o servicio-->
+                        <h3>Audifonos</h3>
+                        <h3 class="esconder">-50%</h3>
+                      </div>
                     </div>
                   </div>
                   <div class="row contenedor-form">
-                      <form class="col s12 formulario">
-                        <div class="row">
-                          <div class="input-field col s12">
-                                <select>
-                                  <option value="" disabled selected>Escoge una opción</option>
-                                  <option value="1">Option 1</option>
-                                  <option value="2">Option 2</option>
-                                  <option value="3">Option 3</option>
-                                </select>
-                                <label>Servicio</label>
-                          </div>
-                        </div>
-                        <div class="row">
-                          <div class="input-field col m6 s12">
-                            <input type="date" class="fecha">
-                            <label class="active" for="last_name">Fecha</label>
-                          </div>
-                          <div class="input-field col m6 s12">
-                              <input type="time" >
-                              <label class="active" for="last_name">hora</label>
-                          </div>
-                        </div>
+                      <form class="col s12 formulario form-productos">
                         <div class="row">
                         <div class="col m6 s12">
                           <p class="padding">
@@ -158,6 +136,6 @@
     <script src="../bower_components/materialize/dist/js/materialize.min.js"></script>
     <script src="../js/index.js"></script>
     <script src="../js/opciones_mapa.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXm_2Gm3d8mYibMixG-AJOmM2iUDHoiZA&callback=initMap"async defer></script>
+
   </body>
   </html>
