--- a/iniciarSesion.html
+++ b/iniciarSesion.html
@@ -53,6 +53,10 @@
 			</form>	
 		</div>
 	</div>
-
+	
+	<!-- SCRIPTS -->
+	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="bower_components/materialize/dist/js/materialize.min.js"></script>
+	<script src="js/index.js"></script>
 </body>
 </html>
