--- a/registrarse.html
+++ b/registrarse.html
@@ -30,7 +30,19 @@
     	<li><a href="#"><i class="material-icons white-text">search</i></a></li>
 	</ul>
 
-
+	<div class="container-fluid">
+		<div class="search row">
+			<div class="hide-on-med-and-down col l12">
+				<form  method="GET">
+					<div class="input-field">
+						 <i class="material-icons prefix">search</i>
+		          		<input id="icon_prefix" type="text" class="validate" placeholder="Buscar...">
+		          		<input type="submit" hidden name="" value="LOL">
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
 	<div class="container">
 		<div class="row">
 			<!-- FORMULARIO REGISTRO -->
@@ -57,6 +69,11 @@
 			</form>	
 		</div>
 	</div>
+	
 
+	<!-- SCRIPTS -->
+	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="bower_components/materialize/dist/js/materialize.min.js"></script>
+	<script src="js/index.js"></script>
 </body>
 </html>
