--- a/registrarse.html
+++ b/registrarse.html
@@ -29,7 +29,8 @@
     	<li><a href="iniciarSesion.html">Iniciar Sesión</a></li>
     	<li><a href="#"><i class="material-icons white-text">search</i></a></li>
 	</ul>
-
+	
+	<!-- BARRA DE BUSQUEDA -->
 	<div class="container-fluid">
 		<div class="search row">
 			<div class="hide-on-med-and-down col l12">
@@ -43,10 +44,12 @@
 			</div>
 		</div>
 	</div>
+
+
 	<div class="container">
 		<div class="row">
 			<!-- FORMULARIO REGISTRO -->
-			<form action="" method="post" accept-charset="utf-8" class="form-group" onsubmit="return check()">
+			<form action="" class="formulario offset-s2 col s8 offset-s2" method="post" accept-charset="utf-8" class="form-group" onsubmit="return check()">
 				<h3>Registrarse</h3>
 				<button class="loginBtn loginBtn--google">
 				  Iniciar Sesión con Google
@@ -65,7 +68,7 @@
 				<label for="password2">Repite contraseña</label><br>
 				<input id="password2" required type="password" name="password2" value="" placeholder="" class="form-control">
 				<button id="enviar" type="submit" class="btn btn-default">Enviar</button><br>
-				<p>¿Ya tienes cuenta? <a href="../inicioSesion" title="">Iniciar Sesión</a></p>
+				<p>¿Ya tienes cuenta? <a href="iniciarSesion.htmlSesion" title="">Iniciar Sesión</a></p>
 			</form>	
 		</div>
 	</div>
