--- a/iniciarSesion.html
+++ b/iniciarSesion.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Registrarse</title>
 	<link rel="stylesheet" href="bower_components/materialize/dist/css/materialize.min.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -29,12 +30,28 @@
     	<li><a href="iniciarSesion.html">Iniciar Sesión</a></li>
     	<li><a href="#"><i class="material-icons white-text">search</i></a></li>
 	</ul>
+	
+	<!-- Barra de busqueda -->
+	<div class="container-fluid">
+		
+		<div class="search row">
+			<div class="hide-on-med-and-down col l12">
+				<form  method="GET">
+					<div class="input-field">
+						 <i class="material-icons prefix">search</i>
+		          		<input id="icon_prefix" type="text" class="validate" placeholder="Buscar...">
+		          		<input type="submit" hidden name="" value="LOL">
+					</div>
+				</form>
+			</div>
+		</div>
+	</div><!-- Fin barra de busqueda -->
 
 
 	<div class="container">
 		<div class="row">
 			<!-- FORMULARIO Inicio -->
-			<form action="" method="post" accept-charset="utf-8" class="form-group" onsubmit="return check()">
+			<form action="" class="formulario offset-s2 col s8 offset-s2" method="post" accept-charset="utf-8" class="form-group" onsubmit="return check()">
 				<h3>Iniciar Sesión</h3>
 				<button class="loginBtn loginBtn--google">
 				  Iniciar Sesión con Google
@@ -42,12 +59,21 @@
 				<button class="loginBtn loginBtn--facebook">
 				  Iniciar Sesión con Facebook
 				</button>
-				<div id='correo-existe' class='form-control err-msg'>Error.</div><br>
-				<label for="correo">Correo</label><br>
-				<input id="correo" required type="email" name="correo" placeholder="john@mail.com" class="form-control">
-
-			    <br><label for="password">Contraseña</label><br>
-				<input id="password" required type="password" name="password" value="" placeholder="" class="form-control">
+				<!-- MENSAJE DE ERROR -->
+				<br><div id='correo-existe' class='form-control err-msg'>Error.</div><br>
+				<div class="row col s12">
+	        		<div class="input-field ">
+		        		<input id="correo" type="email" class="validate">
+		          		<label for="correo">Correo</label>
+		        	</div>
+		      	</div>
+				
+				<div class="row col s12">
+	        		<div class="input-field ">
+		        		<input id="pass" type="password" class="validate">
+		          		<label for="pass">Contraseña</label>
+		        	</div>
+		      	</div>
 				<button id="enviar" type="submit" class="btn btn-default">Enviar</button><br>
 				<p>¿No tienes cuenta? <a href="registrarse.html" title="">Registrarse</a></p>
 			</form>	
