Combine ambas ramas en master

--- a/vistas/registrarse.html
+++ b/vistas/registrarse.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Registrarse</title>
-	<link rel="stylesheet" href="bower_components/materialize/dist/css/materialize.min.css">
+	<link rel="stylesheet" href="../bower_components/materialize/dist/css/materialize.min.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="css/navbar-visitor.css">
-	<link rel="stylesheet" href="css/registrarse-style.css">
+	<link rel="stylesheet" href="../css/navbar-visitor.css">
+	<link rel="stylesheet" href="../css/registrarse-style.css">
 </head>
 <body>
 	<div class="navbar-fixed">
@@ -75,8 +75,8 @@
 	
 
 	<!-- SCRIPTS -->
-	<script src="bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="bower_components/materialize/dist/js/materialize.min.js"></script>
-	<script src="js/index.js"></script>
+	<script src="../bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="../bower_components/materialize/dist/js/materialize.min.js"></script>
+	<script src="../js/index.js"></script>
 </body>
 </html>
