--- a/vistas/index-usuario.html
+++ b/vistas/index-usuario.html
@@ -5,10 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Promos</title>
 	<!-- Materialize -->
-	<link rel="stylesheet" href="bower_components/materialize/dist/css/materialize.min.css">
+	<link rel="stylesheet" href="../bower_components/materialize/dist/css/materialize.min.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="css/navbar-visitor.css">
-	<link rel="stylesheet" href="css/index-style.css">
+	<link rel="stylesheet" href="../css/navbar-user.css">
+	<link rel="stylesheet" href="../css/index-style.css">
+
 
 </head>
 <body>
@@ -19,8 +20,7 @@
 				<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 				<ul class="right hide-on-med-and-down">
 				  	<li id="search-icon"><a href="#"><i class="material-icons">search</i></a></li>
-					<li><a href="registrarse.html">Registrarse</a></li>
-		        	<li><a href="#">Iniciar Sesión</a></li>
+					 <li><a href="#"><i class="material-icons left">person</i>John Doe</a></li>
 				</ul>
 			</div>
 		</nav> <!-- FIN nav -->
@@ -67,13 +67,12 @@
 		      <p class="white-text">This is your fourth panel</p>
 		    </div>
 		</div>
-
 		<!-- Barra de tabs -->
-		<nav id="tabs" class="nav-extended">
+		<nav class="nav-extended">
 			<div class="nav-content">
 		      <ul class="tabs tabs-transparent center-align">
-		        <li class="tab"><a class="active" href="#test1">Servicios</a></li>
-		        <li class="tab"><a href="#test2">Productos</a></li>
+		        <li class="tab"><a href="#test1">Servicios</a></li>
+		        <li class="tab"><a class="active" href="#test2">Productos</a></li>
 		        <li class="tab"><a href="#test4">Tecnología</a></li>
 		      </ul>
     		</div>
@@ -81,7 +80,7 @@
 	</div> <!-- FIN container-fluid -->
 	<div class="container-fluid">
 		<div id="cards-container" class="row col m12">
-			<h3>Servicios</h3>
+			
 			<!-- Colunma 1 -->
 			<div class="row col s12 m6 columna-1">
 
@@ -158,16 +157,21 @@
 		            </div>
 		          </div>
 		        </div>
-			</div><!-- FIn columna 2 -->
+				
 
-		</div><!-- Fin Cards-container -->
+
+			</div><!-- FIn columna 2 -->
+	      
+
+
+		</div>
 	</div>
 	
 	
 
 	<!-- SCRIPTS -->
-	<script src="bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="bower_components/materialize/dist/js/materialize.min.js"></script>
-	<script src="js/index.js"></script>
+	<script src="../bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="../bower_components/materialize/dist/js/materialize.min.js"></script>
+	<script src="../js/index.js"></script>
 </body>
 </html>
