--- a/vistas/iniciarSesion.html
+++ b/vistas/iniciarSesion.html
@@ -5,10 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Registrarse</title>
-	<link rel="stylesheet" href="bower_components/materialize/dist/css/materialize.min.css">
+	<link rel="stylesheet" href="../bower_components/materialize/dist/css/materialize.min.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="css/navbar-visitor.css">
-	<link rel="stylesheet" href="css/registrarse-style.css">
+	<link rel="stylesheet" href="../css/navbar-visitor.css">
+	<link rel="stylesheet" href="../css/registrarse-style.css">
 </head>
 <body>
 	<div class="navbar-fixed">
@@ -81,8 +81,8 @@
 	</div>
 	
 	<!-- SCRIPTS -->
-	<script src="bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="bower_components/materialize/dist/js/materialize.min.js"></script>
-	<script src="js/index.js"></script>
+	<script src="../bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="../bower_components/materialize/dist/js/materialize.min.js"></script>
+	<script src="../js/index.js"></script>
 </body>
 </html>
