--- a/vistas/registrarse.html
+++ b/vistas/registrarse.html
@@ -13,7 +13,7 @@
 	<div class="navbar-fixed">
 		<nav>
 			<div class="nav-wrapper">
-				<a href="index.html" class="brand-logo"><img id="logo" src="img/logo.png"><span>PROMOS</span></a>
+				<a href="index.html" class="brand-logo"><img id="logo" src="../img/logo.png"><span>PROMOS</span></a>
 				<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 				<ul class="right hide-on-med-and-down">
 				  	<li id="search-icon"><a href="#"><i class="material-icons">search</i></a></li>
@@ -51,13 +51,13 @@
 			<!-- FORMULARIO REGISTRO -->
 			<form action="" class="formulario offset-s2 col s8 offset-s2" method="post" accept-charset="utf-8" class="form-group" onsubmit="return check()">
 				<h3>Registrarse</h3>
-				<button class="loginBtn loginBtn--google">
+				<!-- <button class="loginBtn loginBtn--google">
 				  Iniciar Sesión con Google
 				</button>
 				<button class="loginBtn loginBtn--facebook">
 				  Iniciar Sesión con Facebook
-				</button>
-				<div id='correo-existe' class='form-control err-msg'>Ya existe una cuenta asociada con este correo.</div><br>
+				</button> -->
+				<!-- <div id='correo-existe' class='form-control err-msg'>Ya existe una cuenta asociada con este correo.</div><br> -->
 				<label for="nombre">Nombre</label>
 				<input id="nombre" required type="text" name="nombre" placeholder="John Doe" class="form-control">
 				<label for="correo">Correo</label><br>
