--- a/vistas/iniciarSesion.html
+++ b/vistas/iniciarSesion.html
@@ -14,7 +14,7 @@
 	<div class="navbar-fixed">
 		<nav>
 			<div class="nav-wrapper">
-				<a href="index.html" class="brand-logo"><img id="logo" src="img/logo.png"><span>PROMOS</span></a>
+				<a href="index.html" class="brand-logo"><img id="logo" src="../img/logo.png"><span>PROMOS</span></a>
 				<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 				<ul class="right hide-on-med-and-down">
 				  	<li id="search-icon"><a href="#"><i class="material-icons">search</i></a></li>
@@ -53,14 +53,14 @@
 			<!-- FORMULARIO Inicio -->
 			<form action="" class="formulario offset-s2 col s8 offset-s2" method="post" accept-charset="utf-8" class="form-group" onsubmit="return check()">
 				<h3>Iniciar Sesión</h3>
-				<button class="loginBtn loginBtn--google">
+				<!-- <button class="loginBtn loginBtn--google">
 				  Iniciar Sesión con Google
 				</button>
 				<button class="loginBtn loginBtn--facebook">
 				  Iniciar Sesión con Facebook
-				</button>
+				</button> -->
 				<!-- MENSAJE DE ERROR -->
-				<br><div id='correo-existe' class='form-control err-msg'>Error.</div><br>
+				<!-- <br><div id='correo-existe' class='form-control err-msg'>Error.</div><br> -->
 				<div class="row col s12">
 	        		<div class="input-field ">
 		        		<input id="correo" type="email" class="validate">
