--- a/vistas/verProducto.html
+++ b/vistas/verProducto.html
@@ -1,5 +1,5 @@
   <!DOCTYPE html>
-  <html>
+  <html ng-app="verProducto-app">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,11 +12,17 @@
     <link rel="stylesheet" href="../css/servicios.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
-    <script type="text/javascript" src="../js/verProducto.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- AngularJS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/2.0.2/angularfire.min.js"></script>
+    <!-- Controlador -->
+    <script type="text/javascript" src="../js/verProducto-controlador.js"></script>
   </head>
-  <body>
+  <body ng-controller="verProducto-controlador as ctrl">
     <!--Barra de navegación-->
     <nav>
       <div class="nav-wrapper">
@@ -26,7 +32,7 @@
         </ul>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <!--<li id="search-icon"><a href="#"><i class="material-icons">search</i></a></li>-->
+          <li id="search-icon"><a href="#"><i class="material-icons">search</i></a></li>
           <li><a href="#">Iniciar Sesión</a></li> 
           <li><a href="#">Registrarse</a></li>
         </ul>
@@ -37,7 +43,8 @@
         </ul>
       </div>
     </nav>
-    <!--Campo de busqueda
+
+    <!-- Campo de busqueda -->
     <div class="container-fluid">
       <div class="row">
         <div class="search hide-on-med-and-down col l12">
@@ -47,22 +54,27 @@
           </div>
         </div>
       </div>
-    </div>-->
+    </div>
     <!--Detalles del producto o servicio-->
-    <div class="container">
+
+    <!-- "Repite" la vista filtrado en el key proporcionado por GET en el url 
+        digo "Repite" por que solo habrá uno que coicida de la lista de productos.
+    -->
+    <div class="container" 
+          ng-repeat="descuento in toArray(listaDescuentos) | filter:key:strict">
       <div class="row">
         <div class="col s12 m12">
           <div class="card-panel">
             <div class = "container-card">
               <!--Imagen del produto o servicio-->
-              <img  class="imagen-servicio z-depth-3 responsive-img img-producto" src="../img/audifonos.jpg">
+              <img  class="imagen-servicio z-depth-3 responsive-img img-producto" ng-src="{{descuento.imagenUrl}}">
               <!--Botón de redes sociales-->
               <div class="row grid-elementos">
                 <!--Titulo del producto o servicio-->
-                <div class="col s12 m6"><h3 class="titulo">Audifonos</h3></div>
+                <div class="col s12 m6"><h3 class="titulo">{{descuento.titulo}}</h3></div>
 
                 <!--Descuento-->
-                <div class="col s12 m6"><h3 class="descuento">-50%</h3></div>
+                <div class="col s12 m6"><h3 class="descuento">-{{descuento.descuento}}%</h3></div>
                 <!--Botón para abrir el pop up-->
                 <div class="col s12">
                   <a class="waves-effect waves-light button-obtener waves-effect waves-light btn cd-popup-trigger" href="#0"><i class="material-icons right agendar">event</i>Obtener</a>
@@ -70,7 +82,8 @@
               </div>
               <!--Descripción del producto o servicio-->
               <h5>Descripcion:</h5>
-              <p id="descripcion" class ="fi">Literally venmo before they sold out, DIY heirloom forage polaroid offal yr pop-up selfies health goth. Typewriter scenester hammock truffaut meditation, squid before they sold out polaroid portland tousled taxidermy vice. Listicle butcher thundercats, taxidermy pitchfork next level roof party crucifix narwhal kinfolk you probably haven't heard of them portland small batch.
+              <p id="descripcion" class ="fi">
+                {{descuento.descripcion}}
               </p>
               <!--Carrusel del producto o servicio-->
               <!-- <div class="carousel carousel-slider carrusel-style">
