--- a/vistas/verServicio.html
+++ b/vistas/verServicio.html
@@ -25,36 +25,22 @@
   </head>
   <body ng-controller="verServicio-controlador as ctrl">
     <!--Barra de navegación-->
-    <nav>
-      <div class="nav-wrapper">
-        <a href="index.html" class="brand-logo"><img id="logo" src="../img/logo.png"></a>
-        <ul class="left hide-on-med-and-down back">
-        <li><a href="index.html"><i class="material-icons left">keyboard_backspace</i>Regresar</a></li>
-        </ul>
-        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-        <ul class="right hide-on-med-and-down">
-          <!--<li id="search-icon"><a href="#"><i class="material-icons">search</i></a></li>-->
-          <li><a href="#">Iniciar Sesión</a></li> 
-          <li><a href="#">Registrarse</a></li>
-        </ul>
-        <ul class="side-nav" id="mobile-demo">
-          <li><a href="#">Iniciar Sesión</a></li>
-          <li><a href="#">Registrarse</a></li>
-          <!--<li><a href="#"><i class="material-icons">search</i></a></li>-->
-        </ul>
-      </div>
-    </nav>
-    <!--Campo de busqueda
-    <div class="container-fluid">
-      <div class="row">
-        <div class="search hide-on-med-and-down col l12">
-          <div class="input-field">
-            <i class="material-icons prefix">search</i>
-            <input id="icon_prefix" type="text" class="validate" placeholder="Buscar...">
-          </div>
+    <div ng-include ng-show="nombre" src="'navbar-usuario.html'" onload="finishLoad()">
+  </div>
+  <div ng-include ng-hide="nombre" src="'navbar-visitante.html'" onload="finishLoad()">
+  </div>
+  <!-- Barra de busqueda -->
+  <div class="search row">
+    <div class="hide-on-med-and-down col l12">
+      <form  action="busca.html" method="GET">
+        <div class="input-field">
+           <i class="material-icons prefix">search</i>
+                <input id="icon_prefix" name="q" type="text" class="validate" placeholder="Buscar...">
+                <input type="submit" hidden name="" value="LOL">
         </div>
-      </div>
-    </div>-->
+      </form>
+    </div>
+  </div>
     <!--Detalles del producto o servicio-->
     <div class="container" 
          ng-repeat="descuento in toArray(listaServicios) | filter:key:strict">
